<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/menu_settings"
        app:showAsAction="always">
        
        <menu>
            <item
                android:id="@+id/menu_theme"
                android:title="@string/menu_display_mode">
                <menu>
                    <item
                        android:id="@+id/menu_theme_dark"
                        android:title="@string/menu_dark_mode" />
                    <item
                        android:id="@+id/menu_theme_light"
                        android:title="@string/menu_light_mode" />
                </menu>
            </item>
            
            <item
                android:id="@+id/menu_notes"
                android:title="@string/menu_notes" />

            <item
                android:id="@+id/menu_clear_all_tasks"
                android:title="@string/menu_clear_all_tasks" />
            
            <item
                android:id="@+id/menu_clear_completed"
                android:title="@string/menu_clear_completed" />
            
            <item
                android:id="@+id/menu_export_data"
                android:title="@string/menu_export_data" />
            
            <item
                android:id="@+id/menu_reminder_lead"
                android:title="@string/menu_reminder_lead" />

            <item
                android:id="@+id/menu_about"
                android:title="@string/menu_about" />
        </menu>
        
    </item>
    
</menu>
